--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,132 @@
-.logo{
-    height: 6rem;
-    width: 15rem;
-    margin-top: 1rem;
-    margin-left: 0.3rem;
+.logo {
+  height: 6rem;
+  width: 15rem;
+  margin-top: 1rem;
+  margin-left: 0.3rem;
 }
-.position-container{
-    display: flex;
-}
-
-.chat-position{
-    width: 30rem;
-    margin-top: 13rem;
-    margin-left: 6rem;
-}
-.position-player{
-    margin-top: 15rem;
-    margin-left: 3rem;
+.row-simulado{
+  margin-top: 15rem;
+  margin-left: 5rem;
 }
 
-.position-scroll-aula{
-    margin-top: 13rem;
-    margin-left: 7rem;
+.position-container {
+  display: flex;
+}
+
+.chat-position {
+  width: 35rem;
+  margin-top: 13rem;
+  margin-left: 6rem;
+}
+
+.position-player {
+  margin-top: 15rem;
+  margin-left: 3rem;
+}
+
+.position-scroll-aula {
+  margin-top: 13rem;
+  margin-left: 3rem;
 
 }
-  scroll-container {
-    display: block;
-    width: 490px;
-    height: 60rem;
-    overflow-y: scroll;
-    scroll-behavior: smooth;
-  }
-  scroll-page {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 15%;
-    font-size: 5em;
-  }
-  .row-simulado{
-    margin-left: 5rem;
-    margin-top: 15rem;
-  }
- .tabela-position{
-   margin-top: 12.5rem;
- }
+.position-scroll-aula2{
+  margin-top: 13rem;
+  margin-left: 8rem;
+}
+
+
+
+.config-pesq{
+  width: 25rem;
+
+}
+
+scroll-container {
+  display: block;
+  width: 490px;
+  height: 60rem;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+}
+
+scroll-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 15%;
+  font-size: 5em;
+}
+.spass{
+  margin-left: 1rem;
+}
+
+
+
+.session-1 {
+  display: flex;
+}
+
+.config-graf-simu{
+
+}
+
+.session-1-2{
+  margin-left: 2rem;
+
+}
+
+
+
+
+.config-form1{
+  display: flex;
+  margin-top: 8rem;
+
+}
+
+
+.config-cards{
+
+  width: 25rem;
+  margin-left: 1rem;
+
+}
+
+.config-grafic-simu{
+  display: flex;
+
+}
+
+.consifg-grafic-temp{
+  margin-left: 1rem;
+
+}
+
+.config-grafic-red{
+  display: flex;
+
+}
+
+.config-ranking1{
+  display: flex;
+  margin-left: 0.3rem;
+
+}
+
+.config-ranking2{
+  margin-left: 0.9rem;
+}
+
+
+.config-list-red{
+  margin-left: 4rem;
+  margin-top: 15rem;
+
+}
+
+
+.config-form-estud{
+  margin-top: 12rem;
+
+
+}
